...
    private lazy var likeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setImage(UIImage(resource: .likeButtonOn), for: .normal)
        button.addTarget(self,
                         action: #selector(likeButtonClicked),
                         for: .touchUpInside)
        button.accessibilityIdentifier = "like button on"
        return button
    }()
    
    private let gradientView: UIView = {
        let view = UIView()
        view.layer.cornerRadius = 16
...
